Fix overflow issue

--- a/components/Projects/Projects.module.scss
+++ b/components/Projects/Projects.module.scss
@@ -26,6 +26,7 @@
   padding: 1em;
   gap: 1em;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .images {
